--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -22,6 +22,9 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jpa</artifactId>
+			<version>2.1.3</version>
+			<scope>system</scope>
+    			<systemPath>/users/syam/.m2/repository/org/springframework/boot/spring-boot-starter-data-jpa/2.1.3.RELEASE/spring-boot-starter-data-jpa-2.1.3.RELEASE.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
